--- a/index.html
+++ b/index.html
@@ -6,26 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Christian's web services and other cool stuff!">
     <title>Christian's portfolio</title>
+    <link rel="stylesheet" href="css/style.css"
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Christian's Portfolio</h1>
-        <nav>
+        <nav class="link-wrapper">
             <a href="#hero-section">Home</a>
             <a href="#services-section">Services</a>
             <a href="#about-section">About</a>
             <a href="#contact-section">Contact</a>
         </nav>
     </header>
-    <section id="#hero-section">
-        <img src="" alt="Hero Image">
+    <section id="hero-section">
+        <!--<video width="500" autoplay muted loop>
+            <source src="media\video\PexelsVideos1526909.mp4" type="video/mp4">
+            Video not supported
+        </video>-->
+        <img alt="seal" src="media/img/partha-narasimhan-EHs_-3H41YM-unsplash.jpg">
         <div class="hero-image-overlay">
             <h1>Welcome to pure awesomeness!</h1>
             <a href="#services-section">See what we have to offer!</a>
         </div>
     </section>
-    <section id="#services-section">
+    <section id="services-section">
         <article class="service-card">
             <i class="fa fa-code" aria-hidden="true"></i>
             <h3>Frontend development</h3>
