--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Christian's web services and other cool stuff!">
     <title>Christian's portfolio</title>
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="header">
-        <h1>Christian's Portfolio</h1>
+        <a href="#hero-section"><h1><span>C</span>hristian's <span>P</span>ortfolio</h1></a>
         <nav class="link-wrapper">
             <a href="#hero-section">Home</a>
             <a href="#services-section">Services</a>
@@ -30,10 +30,12 @@
             <a href="#services-section">See what we have to offer!</a>
         </div>
     </section>
-    <section id="services-section">
+    <section id="services-section" class="section">
         <article class="service-card">
-            <i class="fa fa-code" aria-hidden="true"></i>
-            <h3>Frontend development</h3>
+            <div class="service-card-header-wrapper">
+                <i class="fa fa-code" aria-hidden="true"></i>
+                <h3>Frontend development</h3>
+            </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime cumque porro impedit voluptate natus? Dolorem consequuntur at velit sunt provident, est corporis repellendus ea nostrum, earum nesciunt sit ex quasi?</p>
         </article>
         <article class="service-card">
@@ -52,7 +54,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, cum cupiditate. Sunt qui minus voluptatem minima mollitia ratione enim libero debitis, assumenda eius ex. Reprehenderit facilis molestiae maxime dolore non.</p>
         </article>
     </section>
-    <section id="about-section">
+    <section id="about-section" class="section">
         <div>
             <img src="" alt="A picture of me">
         </div>
@@ -63,7 +65,7 @@
             </article>
         </aside>
     </section>
-    <footer>
+    <footer class="section">
         <section id="social-section">
             <h2>Share stuff with us!</h2>
             <div class="social-icons-wrapper">
