parallax and service cards

--- a/index.html
+++ b/index.html
@@ -39,31 +39,37 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime cumque porro impedit voluptate natus? Dolorem consequuntur at velit sunt provident, est corporis repellendus ea nostrum, earum nesciunt sit ex quasi?</p>
         </article>
         <article class="service-card">
-            <i class="fa fa-code" aria-hidden="true"></i>
-            <h3> Backend development</h3>
+            <div class="service-card-header-wrapper">
+                <i class="fa fa-code" aria-hidden="true"></i>
+                <h3> Backend development</h3>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus repudiandae voluptate, aperiam autem animi minima iste odio illum corrupti blanditiis est voluptates architecto, dolorem hic perspiciatis dignissimos, adipisci maxime!</p>
         </article>
         <article class="service-card">
-            <i class="fa fa-pencil" aria-hidden="true"></i>
-            <h3>UX design</h3>
+            <div class="service-card-header-wrapper">
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+                <h3>UX design</h3>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iste quo ex libero doloribus similique illum, deleniti, doloremque velit soluta aspernatur veritatis quis officiis et! Consequuntur tempora facere magnam dolorum?</p>
         </article>
         <article class="service-card">
-            <i class="fa fa-users" aria-hidden="true"></i>
-            <h3>Coaching</h3>
+            <div class="service-card-header-wrapper">
+                <i class="fa fa-users" aria-hidden="true"></i>
+                <h3>Coaching</h3>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, cum cupiditate. Sunt qui minus voluptatem minima mollitia ratione enim libero debitis, assumenda eius ex. Reprehenderit facilis molestiae maxime dolore non.</p>
         </article>
     </section>
     <section id="about-section" class="section">
-        <div>
-            <img src="" alt="A picture of me">
+        <div class="about-image-wrapper">
+            <img src="./media/img/chris_transp.png" alt="A picture of me">
         </div>
-        <aside>
+        <div class="about-text-wrapper">
             <article>
                 <h2>About Christian</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veritatis ducimus voluptates, quasi odit repudiandae blanditiis eligendi quibusdam cupiditate, autem similique vero voluptatibus aliquid magni facere quia alias corporis numquam?</p>
             </article>
-        </aside>
+        </div>
     </section>
     <footer class="section">
         <section id="social-section">
