--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
 </head>
 <body>
     <header class="header">
-        <a href="#hero-section"><h1><span>C</span>hristian's <span>P</span>ortfolio</h1></a>
+        <a class="full-logo" href="#hero-section"><h1><span>C</span>hristian's <span>P</span>ortfolio</h1></a>
+        <a class="mobile-logo" href="#hero-section"><h1><span>Cs</span>P</h1></a>
         <nav class="link-wrapper">
             <a href="#hero-section">Home</a>
             <a href="#services-section">Services</a>
             <a href="#about-section">About</a>
             <a href="#contact-section">Contact</a>
         </nav>
+        <div class="mobile-menu">
+            <div class="menu-btn">
+                <div class="menu-btn-burger"></div>
+            </div>
+        </div>
     </header>
     <section id="hero-section">
         <!--<video width="500" autoplay muted loop>
@@ -71,15 +77,15 @@
             </article>
         </div>
     </section>
+    <section id="social-section" class="section">
+        <h2>Share stuff with us!</h2>
+        <div class="social-icons-wrapper">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+            <i class="fa fa-github"></i>
+        </div>
+    </section>
     <footer class="section">
-        <section id="social-section">
-            <h2>Share stuff with us!</h2>
-            <div class="social-icons-wrapper">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <i class="fa fa-github"></i>
-            </div>
-        </section>
         <section id="contact-section">
             <h2>Contact info</h2>
             <div class="contact-info-wrapper">
