more code again again from  9-20

--- a/index.html
+++ b/index.html
@@ -93,8 +93,14 @@
                 <button type="submit">Swooooosh!</button>
             </form>
             <div class="contact-info-wrapper">
-                <a href="mailto:christian.johannesson@drakryggen.com">Mail us!</a>
-                <a href="tel:+46703321481">Phone us!</a>
+                <div class="icon-and-text-wrap">
+                    <i class="fa fa-envelope"></i>
+                    <a href="mailto:christian.johannesson@drakryggen.com">Mail us</a>
+                </div>
+                <div class="icon-and-text-wrap">
+                    <i class="fa fa-phone"></i>
+                    <a href="tel:+46703321481">Phone us</a>
+                </div>
                 <div class="address-wrapper">
                     <strong><p>Adress</p></strong>
                     <p>Puserviksgatan 3</p>
