--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
             <a href="#about-section">About</a>
             <a href="#contact-section">Contact</a>
         </nav>
-        <div class="mobile-menu">
-            <div class="menu-btn">
-                <div class="menu-btn-burger"></div>
-            </div>
+        <div class="menu-btn">
+            <div class="menu-btn-burger"></div>
         </div>
     </header>
+    <div class="mobile-menu">
+        <nav class="mobile-link-wrapper">
+            <a class="mobile-link" href="#hero-section">Home</a>
+            <a class="mobile-link" href="#services-section">Services</a>
+            <a class="mobile-link" href="#about-section">About</a>
+            <a class="mobile-link" href="#contact-section">Contact</a>
+        </nav>
+    </div>
     <section id="hero-section">
         <!--<video width="500" autoplay muted loop>
             <source src="media\video\PexelsVideos1526909.mp4" type="video/mp4">
